--- a/src/juragan/templates/base.html
+++ b/src/juragan/templates/base.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=iso-8859-1" />
-<title>Juragan Ubuntu</title>
+<title>Distributor Ubuntu</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link rel="stylesheet" type="text/css" href="/+media/default.css" />
+<link rel="stylesheet" type="text/css" href="/+media/juragan.css" />
 <script type="text/javascript" src="/+media/jquery.js"></script>
 {% block extraheaders %}{% endblock %}
 </head>
@@ -14,7 +15,7 @@
 <div id="outer">
 
 	<div id="header">
-		<h1><span>Juragan</span>Ubuntu</h1>
+		<h1><span>Distributor</span>Ubuntu</h1>
 		<div id="menu">
 			<ul>
 				<li class="first"><a href="#">homepage</a></li>
@@ -58,7 +59,7 @@
 <div id="outer2"></div>
 
 <div id="footer">
-	&copy; 2009 JuraganUbuntu. Design by <a href="http://www.nodethirtythree.com">NodeThirtyThree</a> + <a href="http://www.freecsstemplates.org/">Free CSS Templates</a>
+	&copy; 2010 DistributorUbuntu. Design by <a href="http://www.nodethirtythree.com">NodeThirtyThree</a> + <a href="http://www.freecsstemplates.org/">Free CSS Templates</a>
 </div>
 
 </body>
