--- a/src/juragan/templates/cari.html
+++ b/src/juragan/templates/cari.html
@@ -1,75 +1,17 @@
 {% extends "base.html" %}
 
 {% block extraheaders %}
-    {% if peta %}
-<script type="text/javascript" src="http://www.google.com/jsapi?hl=id&key={{ key }}"></script>
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+<script type="text/javascript" src="/+media/juragan.js"></script>
 <script type="text/javascript">
-  google.load("maps", "2.x");
-  var map = undefined;
-  var line = undefined;
-  var sx = {{ peta.x }};
-  var sy = {{ peta.y }};
-  var sll;
-   
-  // Call this function when the page has been loaded
-  function initialize() {
-    map = new google.maps.Map2(document.getElementById("map"));
-    map.setCenter(new google.maps.LatLng(sy, sx), 13);
-    sll = new GLatLng(sy, sx);
-    map.addControl(new GSmallMapControl());
-    map.addControl(new GMapTypeControl());
-    map.addOverlay(new GMarker(sll));
-
-    $.getJSON('/daftar/?format=json', function(json) {
-        var icon = new GIcon(G_DEFAULT_ICON);
-        icon.image = '/+media/icons/music.png';
-        icon.iconSize = new GSize(32, 37);
-        icon.shadowSize = new GSize(32, 37);
-        icon.iconAnchor = new GPoint(16, 35);
-        icon.infoWindowAnchor = new GPoint(32, 2);
-
-        var options = { icon: icon };
-
-        var items = json.juragan;
-        var len = items.length;
-        for (var i=0; i<len; i++) {
-            var juragan = items[i];
-            var tt = juragan.toko;
-            var ll = tt.length;
-            for (var j=0; j<ll; j++) {
-                var toko = tt[j];
-                var point = new GLatLng(toko.y, toko.x);
-                var marker = new GMarker(point, options);
-                GEvent.addListener(marker, "click", function() {
-                    var html = "";
-                    html += '<p class="nama"><strong>' + juragan.nama + '</strong></p>';
-                    if (juragan.website != undefined && juragan.website != null) {
-                        html += '<p class="web"><a href="' + juragan.website + '">' + juragan.website + '</a></p>';
-                    }
-                    html += '<p class="email">Email: <a href="mailto:' + juragan.email + '">' + juragan.email + '</a></p>';
-                    html += '<p class="alamat">' + toko.alamat + '<br/>' + toko.kota + '<br/>' + toko.provinsi + '</p>';
-                    marker.openInfoWindowHtml(html);
-                });
-                map.addOverlay(marker);
-            }
-        }
-    });
-    {% endif %}
-  }
-  google.setOnLoadCallback(initialize);
-
-  function pindah(x, y) {
-    if (map == undefined) { return; }
-    map.panTo(new GLatLng(y, x));
-
-    if (line != undefined) {
-        map.removeOverlay(line);
-    }
-    line = new GPolyline([new GLatLng(y, x), sll]);
-    map.addOverlay(line);
-  }
+$(document).ready(function() {
+    var pos = new google.maps.LatLng({{ peta.y }}, {{ peta.x }});
+    juragan.init($('#map'));
+    juragan.show(pos);
+});
 </script>
 {% endblock %}
+
 
 {% block content %}
 
@@ -77,10 +19,10 @@
 <div id="dekat">
 <h2>Lokasi Terdekat</h2>
 <p>Asal: {{ peta.alamat }}</p>
-<p>Beberapa toko juragan terdekat:</p>
+<p>Beberapa distributor Ubuntu terdekat:</p>
 <ol>
     {% for toko in peta.dekat %}
-    <li><span onclick="pindah({{ toko.geo_bujur }}, {{ toko.geo_lintang }})">{{ toko.juragan.nama }}</span> 
+    <li><span onclick="juragan.showToko({{ toko.id }});">{{ toko.juragan.nama }}</span> 
         [<a href="/toko/{{ toko.id }}/">info</a>]
         &raquo; {{ toko.alamat }}, {{ toko.kota }}, {{ toko.provinsi_nama }}</li>
     {% endfor %}
@@ -89,7 +31,7 @@
 </div>
 {% endif %}
 
-<h2>Cari Juragan</h2>
+<h2>Cari Distributor</h2>
 
 <div id="cari">
 <form method="post" action="/cari/">
