--- a/src/juragan/templates/homepage.html
+++ b/src/juragan/templates/homepage.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=iso-8859-1" />
-<title>Juragan Ubuntu</title>
+<title>Distributor Ubuntu</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link rel="stylesheet" type="text/css" href="/+media/default.css" />
@@ -12,7 +12,7 @@
 <div id="outer">
 
 	<div id="header">
-		<h1><span>Juragan</span>Ubuntu</h1>
+		<h1><span>Distributor</span>Ubuntu</h1>
 		<div id="menu">
 			<ul>
 				<li class="first"><a href="#">homepage</a></li>
@@ -142,7 +142,7 @@
 <div id="outer2"></div>
 
 <div id="footer">
-	&copy; 2009 JuraganUbuntu. Design by <a href="http://www.nodethirtythree.com">NodeThirtyThree</a> + <a href="http://www.freecsstemplates.org/">Free CSS Templates</a>
+	&copy; 2009 DistributorUbuntu. Design by <a href="http://www.nodethirtythree.com">NodeThirtyThree</a> + <a href="http://www.freecsstemplates.org/">Free CSS Templates</a>
 </div>
 
 </body>
