--- a/src/juragan/templates/base.html
+++ b/src/juragan/templates/base.html
@@ -15,13 +15,13 @@
 <div id="outer">
 
 	<div id="header">
-		<h1><span>Distributor</span>Ubuntu</h1>
+		<h1><a href="/"><span>Distributor</span>Ubuntu</a></h1>
 		<div id="menu">
 			<ul>
-				<li class="first"><a href="#">homepage</a></li>
-				<li><a href="#">recent articles</a></li>
-				<li><a href="#">about us</a></li>
-				<li><a href="#">contact us</a></li>
+				<li><a href="/">beranda</a></li>
+				<li><a href="/distributor/">daftar distributor</a></li>
+				<li><a href="/cari/">cari distributor</a></li>
+				<li><a href="/bantuan/">bantuan</a></li>
 			</ul>
 		</div>
 	</div>
