Tampilkan nomor telepon

--- a/src/juragan/templates/toko.html
+++ b/src/juragan/templates/toko.html
@@ -16,6 +16,10 @@
 <li><img src="/+media/icons/house.png" alt="website">
     <a href="{{ toko.website }}">{{ toko.website }}</a></li>
 {% endif %}
+{% if toko.telepon %}
+<li><img src="/+media/icons/phone.png" alt="telepon">
+    {{ toko.telepon }}</li>
+{% endif %}
 </ul>
 </div>
 
