Refactor besar-besaran

--- a/src/juragan/templates/base.html
+++ b/src/juragan/templates/base.html
@@ -19,7 +19,7 @@
 		<div id="menu">
 			<ul>
 				<li><a href="/">beranda</a></li>
-				<li><a href="/distributor/">daftar distributor</a></li>
+				<li><a href="/toko/">daftar distributor</a></li>
 				<li><a href="/cari/">cari distributor</a></li>
 				<li><a href="/bantuan/">bantuan</a></li>
 			</ul>
