--- a/src/juragan/templates/toko/cari.html
+++ b/src/juragan/templates/toko/cari.html
@@ -1,6 +1,7 @@
 {% extends "toko/base.html" %}
 
 {% block extraheaders %}
+<script type="text/javascript" src="/+media/gears_init.js"></script>
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript" src="/+media/juragan.js"></script>
 {% if posisi %}
@@ -37,7 +38,7 @@ $(document).ready(function() {
 
 <div id="cari">
 <form method="post" action="/cari/">
-<p><strong>Lokasi Anda</strong>:</p>
+<p><strong>Lokasi Anda</strong>: <span class="geo"></span></p>
 <p><label>Alamat:</label> {{ form.alamat }}</p>
 <p><label>Kota:</label> {{ form.kota }}</p>
 <p><label>Provinsi:</label> {{ form.provinsi }}</p>
@@ -47,19 +48,36 @@ $(document).ready(function() {
 
 {% if not posisi %}
 <script type="text/javascript">
+var geolocation = undefined;
 $(document).ready(function() {
     if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(function(position) {  
-            url = '/lokasi/' + position.coords.latitude + ',' + position.coords.longitude + '/';
-            $.getJSON(url, function(json) {
-                var lokasi = json.lokasi;
-                $('#cari *[name="kota"]').get(0).value = lokasi.kota;
-                $('#cari *[name="alamat"]').get(0).value = lokasi.alamat;
-                $('#cari *[name="provinsi"]').get(0).value = lokasi.provinsi;
-            });
-        });  
-    };
+        geolocation = navigator.geolocation;
+    }
+    else if (window.google && window.google.gears) {
+        try {
+            geolocation = google.gears.factory.create('beta.geolocation');
+        }
+        catch (e) { }
+    }
+    if (geolocation != undefined) {
+        $('#cari .geo').html('<a href="#" onclick="deteksiPosisi(); return false;">deteksi posisi</a>');
+    }
 });
+function deteksiPosisi() {
+    if (geolocation == undefined) { return; }
+
+    $('#cari .geo').html('mendeteksi posisi..');
+    geolocation.getCurrentPosition(function(position) {  
+        url = '/lokasi/' + position.coords.latitude + ',' + position.coords.longitude + '/';
+        $.getJSON(url, function(json) {
+            var lokasi = json.lokasi;
+            $('#cari *[name="kota"]').get(0).value = lokasi.kota;
+            $('#cari *[name="alamat"]').get(0).value = lokasi.alamat;
+            $('#cari *[name="provinsi"]').get(0).value = lokasi.provinsi;
+            $('#cari .geo').html('');
+        });
+    });  
+}
 </script>
 {% endif %}
 
