--- a/src/juragan/templates/toko/admin/tambah.html
+++ b/src/juragan/templates/toko/admin/tambah.html
@@ -2,7 +2,12 @@
 
 {% block content %}
 <div id="admin" class="tambah">
+{% ifequal tipe "edit" %}
+<h2>Ubah Data Toko</h2>
+{% else %}
 <h2>Tambah Toko</h2>
+{% endifequal %}
+
 
 <form method="post">
 
@@ -54,7 +59,7 @@
 <legend>Lokasi</legend>
 
 <div{% if form.alamat.errors %} class="error"{% endif %}>
-    <p class="field">{{ form.alamat.label_tag }} {{ form.alamat }}</p>
+    <p class="field alamat">{{ form.alamat.label_tag }} {{ form.alamat }}</p>
     {{ form.alamat.errors }}
     {% if form.alamat.help_text %}
     <p class="help">{{ form.alamat.help_text }}</p>
@@ -62,7 +67,7 @@
 </div>
 
 <div{% if form.kota.errors %} class="error"{% endif %}>
-    <p class="field">{{ form.kota.label_tag }} {{ form.kota }}</p>
+    <p class="field kota">{{ form.kota.label_tag }} {{ form.kota }}</p>
     {{ form.kota.errors }}
     {% if form.kota.help_text %}
     <p class="help">{{ form.kota.help_text }}</p>
@@ -70,7 +75,7 @@
 </div>
 
 <div{% if form.provinsi.errors %} class="error"{% endif %}>
-    <p class="field">{{ form.provinsi.label_tag }} {{ form.provinsi }}</p>
+    <p class="field provinsi">{{ form.provinsi.label_tag }} {{ form.provinsi }}</p>
     {{ form.provinsi.errors }}
     {% if form.provinsi.help_text %}
     <p class="help">{{ form.provinsi.help_text }}</p>
@@ -87,9 +92,20 @@
     <p class="help">Koordinat lintang dan bujur.</p>
 </div>
 
-<div><p>Klik untuk mencari koordinat dari
-<button>alamat</button> atau <button>Google Maps</button>
-</p></div>
+<div class="cari-koordinat">
+<p>Klik untuk mencari koordinat dari
+    <button onclick="k_alamat(); return false;">alamat</button> atau 
+    <button onclick="k_gm(); return false;">Google Maps</button>
+</p>
+<p class="info"></p>
+</div>
+<div class="cari-koordinat-gm" style="display:none">
+    <p>Klik ganda pada peta atau lakukan pencarian untuk mengeset koordinat.</p>
+    <div id="peta"></div>
+    <p><input type="text" class="cari-gm"/>
+        <button onclick="cari_gm(); return false;">cari</button>
+    </p>
+</div>
 
 </fieldset>
 <fieldset>
@@ -111,8 +127,117 @@
     {% endif %}
 </div>
 
-<div class="submit"><p class="field"><input type="submit" value="Tambah Toko"/></p></div>
+<div class="submit"><p class="field">
+{% ifequal tipe "edit" %}
+<input type="submit" value="Ubah Data Toko"/>
+{% else %}
+<input type="submit" value="Tambah Toko"/>
+{% endifequal %}
+</p></div>
 </form>
 
 </div>
+{% endblock %}
+
+{% block extraheaders %}
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+<script type="text/javascript">
+function k_alamat() {
+    var form = $('#admin.tambah form');
+    var alamat = form.find('.alamat input').get(0).value;
+    var kota = form.find('.kota input').get(0).value;
+    var provinsi = form.find('.provinsi select').get(0).value;
+    var ilat = form.find('.koordinat input').get(0);
+    var ilng = form.find('.koordinat input').get(1);
+    var info = form.find('.cari-koordinat p.info');
+
+    info.html('mencari koordinat..');
+
+    $.getJSON('/lokasi/', {alamat: alamat, kota: kota, provinsi: provinsi},
+        function(json) {
+            ilat.value = json.lokasi.lat;
+            ilng.value = json.lokasi.lng;
+            info.html('');
+        });
+                           
+}
+var map = undefined;
+var geocoder = undefined;
+var marker = undefined;
+function k_gm() {
+    var form = $('#admin.tambah form');
+    form.find('.cari-koordinat-gm').show();
+
+    if (map != undefined) {
+        return;
+    }
+
+    var alamat = form.find('.alamat input').get(0).value;
+    var kota = form.find('.kota input').get(0).value;
+    var provinsi = form.find('.provinsi select').get(0).value;
+    var provinsi_nama = form.find('.provinsi select option[value="'+provinsi+'"]').text();
+    var ilat = form.find('.koordinat input').get(0);
+    var ilng = form.find('.koordinat input').get(1);
+
+    map = new google.maps.Map($('#peta').get(0), {
+        zoom: 13,
+        mapTypeId: google.maps.MapTypeId.ROADMAP
+    });
+    geocoder = new google.maps.Geocoder();
+    google.maps.event.addListener(map, 'dblclick', function() {
+        var center = map.getCenter();
+        marker.setPosition(center);
+        var lat = center.lat();
+        var lng = center.lng();
+        ilat.value = lat;
+        ilng.value = lng;
+    });
+    marker = new google.maps.Marker();
+
+    $.getJSON('/lokasi/', {alamat: alamat, kota: kota, provinsi: provinsi},
+        function(json) {
+            var pos = new google.maps.LatLng(json.lokasi.lat, json.lokasi.lng);
+            map.setOptions({
+                center: pos
+            });
+            var bounds = new google.maps.LatLngBounds(
+                new google.maps.LatLng(json.lokasi.south, json.lokasi.west),
+                new google.maps.LatLng(json.lokasi.north, json.lokasi.east)
+            );
+            map.fitBounds(bounds);
+        });
+
+    var txt = form.find('.cari-gm');
+    txt.keypress(function(e) {
+        if (e.keyCode == 13) {
+            cari_gm();
+            return false;
+        }
+    });
+    txt.select();
+}
+function cari_gm() {
+    var form = $('#admin.tambah form');
+    var input = form.find('.cari-gm').get(0);
+    var q = input.value;
+
+    var ilat = form.find('.koordinat input').get(0);
+    var ilng = form.find('.koordinat input').get(1);
+
+    geocoder.geocode({'address': q}, function(res, stat) {
+        console.log('stat:', stat);
+        console.log('res:', res);
+        if (stat == google.maps.GeocoderStatus.OK) {
+            map.fitBounds(res[0].geometry.bounds);
+            map.setCenter(res[0].geometry.location);
+
+            marker.setMap(map);
+            marker.setPosition(res[0].geometry.location);
+
+            ilat.value = res[0].geometry.location.lat();
+            ilng.value = res[0].geometry.location.lng();
+        }
+    });
+}
+</script>
 {% endblock %}
