--- a/src/juragan/templates/toko/cari.html
+++ b/src/juragan/templates/toko/cari.html
@@ -17,6 +17,7 @@ $(document).ready(function() {
 
 
 {% block content %}
+<div id="cari">
 
 {% if posisi %}
 <div id="dekat">
@@ -81,5 +82,6 @@ function deteksiPosisi() {
 </script>
 {% endif %}
 
+</div>
 {% endblock %}
 
