--- a/src/juragan/templates/base.html
+++ b/src/juragan/templates/base.html
@@ -58,9 +58,9 @@
     Design by <a href="http://www.nodethirtythree.com">NodeThirtyThree</a> 
     + <a href="http://www.freecsstemplates.org/">Free CSS Templates</a>
     {% if user.is_authenticated %}
-    + <a href="/accounts/logout/">Logout</a>
+    + <a href="/logout/">Logout</a>
     {% else %}
-    + <a href="/accounts/login/">Login</a>
+    + <a href="/login/">Login</a>
     {% endif %}
 
 </div>
