Tambah link untuk reset password

--- a/src/juragan/templates/login.html
+++ b/src/juragan/templates/login.html
@@ -4,6 +4,9 @@
 <div id="login">
 <h2>Login</h2>
 
+<p>Silakan masukkan username dan password untuk login. 
+    <a href="/accounts/password/reset/">Lupa password?</a></p>
+
 <form method="post">
 {{ form.as_p }}
 <p><label></label><input type="submit" value="Login"/></p>
