Tambah link untuk ganti password

--- a/src/juragan/templates/base.html
+++ b/src/juragan/templates/base.html
@@ -58,6 +58,7 @@
     Design by <a href="http://www.nodethirtythree.com">NodeThirtyThree</a> 
     + <a href="http://www.freecsstemplates.org/">Free CSS Templates</a>
     {% if user.is_authenticated %}
+    + <a href="/accounts/password/change/">Ganti Password</a>
     + <a href="/logout/">Logout</a>
     {% else %}
     + <a href="/login/">Login</a>
