--- a/src/juragan/templates/base.html
+++ b/src/juragan/templates/base.html
@@ -3,6 +3,7 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=iso-8859-1" />
 <title>Distributor Ubuntu</title>
+<meta name="viewport" content="width=720" />
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link rel="stylesheet" type="text/css" href="/+media/default.css" />
